# charge_optimizer

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MATH.md  QUICKSTART.md  README.md  build.sh
examples/: README.md
examples/acetone/: acetone.xyz  acetone_esp.cube
examples/methane/: Dt.cube  geom.xyz  methane.xyz  methane_esp.cube  methane_esp_psi4.cube  methane_psi4.in  methane_psi4.out
examples/water/: Dt.cube  geom.xyz  water.xyz  water_correct.in  water_correct.out  water_correct.xyz  water_esp_correct.cube  water_esp_psi4.cube  water_psi4.in  water_psi4.out  water_psi4_geom.xyz
scripts/: Dt.cube  generate_esp.py  geom.xyz
src/: main.cpp
src/analysis/: symmetry.cpp  symmetry.hpp  validator.cpp  validator.hpp
src/core/: atom.hpp  esp_grid.cpp  esp_grid.hpp  molecule.cpp  molecule.hpp
src/io/: cube_parser.cpp  cube_parser.hpp  cube_parser.hpp.bak  xyz_parser.cpp  xyz_parser.hpp
src/solver/: active_set.cpp  active_set.hpp  constraints.cpp  constraints.hpp  qp_solver.cpp  qp_solver.hpp
tests/: CMakeLists.txt  test_basic.cpp
